# banvik-rp2350-playground

./: .gitattributes  .gitignore  README.md
firmware/: .gitignore  CLAUDE.md  Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/examples/: Cargo.toml
firmware/rp2350-playground/: Cargo.toml
host/: Cargo.toml
host/mp3-protocol/: Cargo.toml
host/mp3-protocol/src/: lib.rs
host/mp3-server/: Cargo.toml  specification.md
host/mp3-server/src/: library.rs  main.rs  protocol.rs  transcode.rs
pcb/: MCU_RaspberryPi_RP2350.kicad_sym  fp-lib-table  improvements.md  rp-lights.kicad_pcb  rp-lights.kicad_pro  rp-lights.kicad_sch  sym-lib-table
pcb/RP2350_80QFN_minimal.pretty/: L_pol_2016.kicad_mod  RP2350-QFN-80-1EP_10x10_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod
pcb/jlcpcb/: project.db
pcb/jlcpcb/production_files/: BOM-rp-lights.csv  CPL-rp-lights.csv
pcb/rpi-rmc20452t/: RPI_RMC20452T.kicad_sym  rpi_rmc20452t.kicad_mod
