[workspace]
members = [
    "rp2350-playground",
    "examples",
]
resolver = "3"


[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
nanomp3 = { git = "https://github.com/wavey-ai/nanomp3", branch = "master" }
