[package]
edition = "2024"
name = "rp2350-playground-examples"
version = "0.1.0"
authors = ["Erik Bånvik <erik.public@gmail.com>"]

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"

cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.1"

efmt = { git = "https://github.com/dragonnn/efmt.git", branch = "main" , features = ["heapless09"] }

embedded-alloc = "0.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-futures = { version = "0.1" }
embassy-rp = { version = "0.9", features = ["binary-info", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

heapless = { version = "0.9" }

nanomp3 = { git = "https://github.com/wavey-ai/nanomp3.git", branch = "master" }

panic-probe = { version = "1.0", features = ["print-defmt"] }

smart-leds = "0.4.0"
static_cell = "2.1"

xmrs = { version = "0.9.9", default-features =  false, features = ["import", "libm"] }
xmrsplayer = { version = "0.9.7", default-features =  false, features = ["libm"] }
